--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,6 +254,7 @@ label.option:hover {
 label.option i {
   opacity: .7;
   font-size: .8em;
+  display: none;
 }
 input[type=checkbox] {
   position: absolute;
@@ -514,7 +515,8 @@ Results
   background: url("../images/police-icon.svg") center center no-repeat;
   background-size: 30px 30px;
   background-color: #000000;
-  padding: 20px;
+  padding: 22px;
+  border-radius: 50%;
   transition: background-color 0.15s ease-in;
   -moz-transition: background-color 0.15s ease-in;
   -webkit-transition: background-color 0.15s ease-in;
