--- a/less/style.less
+++ b/less/style.less
@@ -283,6 +283,7 @@ label {
     i {
       opacity:.7;
       font-size:.8em;
+      display:none;
     }
   }
 }
@@ -592,7 +593,8 @@ Results
       background: url("../images/police-icon.svg") center center no-repeat;
       background-size: 30px 30px;
       background-color: @cr-darkest;
-      padding: 20px;
+      padding: 22px;
+      border-radius:50%;
       transition: background-color .15s ease-in;
       -moz-transition: background-color .15s ease-in;
       -webkit-transition: background-color .15s ease-in;
