--- a/templates/_case_search_form.html
+++ b/templates/_case_search_form.html
@@ -73,88 +73,88 @@
 
         <div class="form-group tags">
           <label>Type of interaction</label>
-            <input type="checkbox" name="home-invasion" id="home-invasion" value="home-invasion">
+            <input type="checkbox" name="tags" id="home-invasion" value="home invasion">
               <label for="home-invasion" class="option">Home invasion <i>108</i></label>
-            <input type="checkbox" name="traffic-stop" id="traffic-stop" value="traffic-stop">
+            <input type="checkbox" name="tags" id="traffic-stop" value="traffic stop">
               <label for="traffic-stop" class="option">Traffic stop <i>98</i></label>
-            <input type="checkbox" name="lock-up" id="lock-up" value="lock-up">
+            <input type="checkbox" name="tags" id="lock-up" value="lock-up">
               <label for="lock-up" class="option">Lock-up <i>20</i></label>
-            <input type="checkbox" name="plain-clothes-officer" id="plain-clothes-officer" value="plain-clothes-officer">
+            <input type="checkbox" name="tags" id="plain-clothes-officer" value="plain-clothes officer">
               <label for="plain-clothes-officer" class="option">Plain-clothes officer <i>20</i></label>
-            <input type="checkbox" name="off-duty-officer" id="off-duty-officer" value="off-duty-officer">
+            <input type="checkbox" name="tags" id="off-duty-officer" value="off-duty officer">
               <label for="off-duty-officer" class="option">Off-duty officer <i>20</i></label>
-            <input type="checkbox" name="protest" id="protest" value="protest">
+            <input type="checkbox" name="tags" id="protest" value="protest">
               <label for="protest" class="option">Protest <i>20</i></label>
         
 
           <label>Type of misconduct</label>
-            <input type="checkbox" name="false-report" id="false-report" value="false-report">
+            <input type="checkbox" name="tags" id="false-report" value="false report">
               <label for="false-report" class="option">False report <i>313</i></label>
-            <input type="checkbox" name="stolen-property" id="stolen-property" value="stolen-property">
+            <input type="checkbox" name="tags" id="stolen-property" value="stolen property">
               <label for="stolen-property" class="option">Stolen property <i>32</i></label>
-            <input type="checkbox" name="witness-manipulation" id="witness-manipulation" value="witness-manipulation">
+            <input type="checkbox" name="tags" id="witness-manipulation" value="witness manipulation">
               <label for="witness-manipulation" class="option">Witness manipulation <i>28</i></label>
-            <input type="checkbox" name="strip-search" id="strip-search" value="strip-search">
+            <input type="checkbox" name="tags" id="strip-search" value="strip search">
               <label for="strip-search" class="option">Strip search <i>20</i></label>
-            <input type="checkbox" name="retaliation" id="retaliation" value="retaliation">
+            <input type="checkbox" name="tags" id="retaliation" value="retaliation">
               <label for="retaliation" class="option">Retaliation <i>20</i></label>
-            <input type="checkbox" name="sexual-harassment" id="sexual-harassment" value="sexual-harassment">
+            <input type="checkbox" name="tags" id="sexual-harassment" value="sexual harassment">
               <label for="sexual-harassment" class="option">Sexual harassment <i>20</i></label>
-            <input type="checkbox" name="forced-confession" id="forced-confession" value="forced-confession">
+            <input type="checkbox" name="tags" id="forced-confession" value="forced confession">
               <label for="forced-confession" class="option">Forced confession <i>20</i></label>
-            <input type="checkbox" name="lawyer" id="lawyer" value="lawyer">
+            <input type="checkbox" name="tags" id="lawyer" value="lawyer">
               <label for="lawyer" class="option">Laywer (legal access) <i>20</i></label>
-            <input type="checkbox" name="torture" id="torture" value="torture">
+            <input type="checkbox" name="tags" id="torture" value="torture">
               <label for="torture" class="option">Torture <i>20</i></label>
-            <input type="checkbox" name="sexual-abuse" id="sexual-abuse" value="sexual-abuse">
+            <input type="checkbox" name="tags" id="sexual-abuse" value="sexual abuse">
               <label for="sexual-abuse" class="option">Sexual abuse <i>20</i></label>
-            <input type="checkbox" name="bribery" id="bribery" value="bribery">
+            <input type="checkbox" name="tags" id="bribery" value="bribery">
               <label for="bribery" class="option">Bribery <i>20</i></label>
         </div>
 
         <div class="form-group tags">
           <label>Outcome</label>          
-            <input type="checkbox" name="resisting-arrest-charges" id="resisting-arrest-charges" value="resisting-arrest-charges">
+            <input type="checkbox" name="tags" id="resisting-arrest-charges" value="resisting arrest charges">
               <label for="resisting-arrest-charges" class="option">Resisting arrest charges <i>68</i></label>
-            <input type="checkbox" name="assault-charges" id="assault-charges" value="assault-charges">
+            <input type="checkbox" name="tags" id="assault-charges" value="assault charges">
               <label for="assault-charges" class="option">Assault charges <i>63</i></label>
-            <input type="checkbox" name="killed" id="killed" value="killed">
+            <input type="checkbox" name="tags" id="killed" value="killed">
               <label for="killed" class="option">Killed <i>20</i></label>
-            <input type="checkbox" name="officer-charged" id="officer-charged" value="officer-charged">
+            <input type="checkbox" name="tags" id="officer-charged" value="officer charged">
               <label for="officer-charged" class="option">Officer charged <i>20</i></label>
-            <input type="checkbox" name="car-impounded" id="car-impounded" value="car-impounded">
+            <input type="checkbox" name="tags" id="car-impounded" value="car impounded">
               <label for="car-impounded" class="option">Car impounded <i>20</i></label>
 
 
           <label>Type of weapon</label>        
-            <input type="checkbox" name="shooting" id="shooting" value="shooting">
+            <input type="checkbox" name="tags" id="shooting" value="shooting">
               <label for="shooting" class="option">Shooting <i>45</i></label>
-            <input type="checkbox" name="taser" id="taser" value="taser">
+            <input type="checkbox" name="tags" id="taser" value="taser">
               <label for="taser" class="option">Taser <i>20</i></label>
-            <input type="checkbox" name="pepper-spray" id="pepper-spray" value="pepper-spray">
+            <input type="checkbox" name="tags" id="pepper-spray" value="pepper spray">
               <label for="pepper-spray" class="option">Pepper spray <i>20</i></label>
-            <input type="checkbox" name="nightstick" id="nightstick" value="nightstick">
+            <input type="checkbox" name="tags" id="nightstick" value="nightstick">
               <label for="nightstick" class="option">Nightstick <i>20</i></label>
-            <input type="checkbox" name="hog-tied" id="hog-tied" value="hog-tied">
+            <input type="checkbox" name="tags" id="hog-tied" value="hog tied">
               <label for="hog-tied" class="option">Hog tied <i>20</i></label>
 
 
           <label>Plaintiff details</label>
-            <input type="checkbox" name="minor" id="minor" value="minor">
+            <input type="checkbox" name="tags" id="minor" value="minor">
               <label for="minor" class="option">Minor <i>66</i></label>
-            <input type="checkbox" name="mental-health-issues" id="mental-health-issues" value="mental-health-issues">
+            <input type="checkbox" name="tags" id="mental-health-issues" value="mental health issues">
               <label for="mental-health-issues" class="option">Mental health issues <i>14</i></label>
-            <input type="checkbox" name="physical-disability" id="physical-disability" value="physical-disability">
+            <input type="checkbox" name="tags" id="physical-disability" value="physical disability">
               <label for="physical-disability" class="option">Physical disability <i>20</i></label>
-            <input type="checkbox" name="animal" id="animal" value="animal">
+            <input type="checkbox" name="tags" id="animal" value="animal">
               <label for="animal" class="option">Animal (Pet) <i>20</i></label>
-            <input type="checkbox" name="pregnant" id="pregnant" value="pregnant">
+            <input type="checkbox" name="tags" id="pregnant" value="pregnant">
               <label for="pregnant" class="option">Pregnant <i>20</i></label>
-            <input type="checkbox" name="elderly" id="elderly" value="elderly">
+            <input type="checkbox" name="tags" id="elderly" value="elderly">
               <label for="elderly" class="option">Elderly <i>20</i></label>
-            <input type="checkbox" name="sexual-orientation-gender-identity" id="sexual-orientation-gender-identity" value="sexual-orientation-gender-identity">
+            <input type="checkbox" name="tags" id="sexual-orientation-gender-identity" value="sexual orientation/gender identity">
               <label for="sexual-orientation-gender-identity" class="option">Sexual orientation / gender identity <i>20</i></label>
-            <input type="checkbox" name="muslim" id="muslim" value="muslim">
+            <input type="checkbox" name="tags" id="muslim" value="muslim">
               <label for="muslim" class="option">Muslim <i>20</i></label>
         </div>
 
