--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -1,9 +1,9 @@
 <script type="text/javascript">
   var site_path = '{{ site_path }}';
-  var cases_json = {{ cases_json()|safe }};
-  var officers_json = {{ officers_json()|safe }};  
 </script>
 
+{{ JS.push('data/cases.js') }}
+{{ JS.push('data/officers.js') }}
 {{ JS.push('vendor/chosen/chosen.jquery.js') }}
 {{ JS.push('vendor/typeahead.js/dist/typeahead.bundle.js') }}
 {{ JS.push('vendor/seiyria-bootstrap-slider/dist/bootstrap-slider.js') }}
