fix for multiple tags

--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -43,6 +43,8 @@
             <p><%= this.formatStr(model.narrative) %></p>
           </div>
           <%  } %>
+          
+          <p><%= model.tags %></p>
 
           <% if ( model.officers.length > 0){ %>
           <div class="case-officers">
