default sort: incident date, most recent

--- a/templates/_results.html
+++ b/templates/_results.html
@@ -5,6 +5,8 @@
       <div class="case-list-sort-container">
         <label for="case-list-sort">Sort by</label>
         <select id="case-list-sort" class="chosen">
+          <option value="date-newest-oldest">Incident date, most recent</option>
+          <option value="date-oldest-newest">Incident date, oldest</option>
           <option value="payment-high-low">Payment, high to low</option>
           <option value="payment-low-high">Payment, low to high</option>
         </select>
