--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -44,7 +44,7 @@
           </div>
           <%  } %>
           
-          <p><%= model.tags %></p>
+          <p style="display:none;"><%= model.tags %></p>
 
           <% if ( model.officers.length > 0){ %>
           <div class="case-officers">
