--- a/less/style.less
+++ b/less/style.less
@@ -147,9 +147,16 @@ Filters
   border:1px solid #000;
   padding:20px;
   margin-bottom:1px;
+  float:left;
+  width:100%;
 
   label {
     color:@cr-lightest;
+  }
+
+  &.split-column {
+    width:50%;
+    float:left;
   }
 }
 #search-intro, #case-search-statement {
@@ -704,6 +711,31 @@ label.results-label {
     }
   }
 }
+
+/************
+  Detail Page
+************/
+.detail-page .case-description {
+  background-color:@cr-lightest;
+  padding:20px;
+}
+
+.wrapper-inner-flex {
+  display:flex;
+
+  .case-description {
+    flex:1;
+    margin-right:20px;
+  }
+
+  #map {
+    min-height:400px;
+    flex: 1;
+    margin-left:0px;
+  }
+}
+
+
 
 /* 
   Nav
