case detail officer template

--- a/templates/_officer.html
+++ b/templates/_officer.html
@@ -11,8 +11,8 @@
 	</div>
 </div>
 
-<div class="detail-wrapper">
+<!-- <div class="detail-wrapper">
   <div class="case-officers">
     <label class="results-label" style="float:none;">Cases:</label>
   </div>
-</div>
+</div> -->
