--- a/templates/_officer.html
+++ b/templates/_officer.html
@@ -1,5 +1,5 @@
 
-<div class="detail-wrapper">
+<!--<div class="detail-wrapper">-->
 	<div class="officer" data-case_number="{{ officer.case_number }}">
 	  	<div class="officer-logo"></div>
 		<div class="officer-text">
@@ -9,7 +9,7 @@
 		</div>
 
 	</div>
-</div>
+<!--</div>-->
 
 <!-- <div class="detail-wrapper">
   <div class="case-officers">
