--- a/templates/officer.html
+++ b/templates/officer.html
@@ -13,9 +13,9 @@
 
 	  <div id="results-wrapper">
       	{% include 'templates/_statement.html' %}
-	    
-	    {% include 'templates/_officer.html' %}
-	    
+	    <div class="detail-wrapper">
+	      {% include 'templates/_officer.html' %}
+	    </div>
 	    {% include 'templates/_results.html' %}
 	  </div> <!--end: results wrapper-->
 	</div><!--end: container-inner-->
