--- a/less/style.less
+++ b/less/style.less
@@ -110,22 +110,22 @@ Search Screen
   top:0;
 }
 
-body.cases {
-  .officer-tab {
-    display: none;
-  }
-  .case-tab {
-    display: block;
-  }
-}
-body.officers {
-  .officer-tab {
-    display: block;
-  }
-  .case-tab {
-    display: none;
-  }
-}
+// body.cases {
+//   .officer-tab {
+//     display: none;
+//   }
+//   .case-tab {
+//     display: block;
+//   }
+// }
+// body.officers {
+//   .officer-tab {
+//     display: block;
+//   }
+//   .case-tab {
+//     display: none;
+//   }
+// }
 
 /* ==========================================================================
 Filters
@@ -259,7 +259,9 @@ ul.tab-selector {
   .search-form {
     float: left;
     width:100%;
-    padding: 30px 20px 20px;
+  }
+  #case-search-form, #officer-search-form {
+    margin:30px 20px 20px;
   }
   #tag-group {
     display:block;
@@ -457,11 +459,6 @@ Form Elements
 /* ==========================================================================
 Results
 ========================================================================== */
-.case-list,
-.officer-list {
-  display: none;
-}
-
 .case {
   width:100%;
   border:1px solid @cr-darkest;
@@ -715,9 +712,89 @@ label.results-label {
 /************
   Detail Page
 ************/
-.detail-page .case-description {
-  background-color:@cr-lightest;
-  padding:20px;
+.detail-wrapper {
+  display:none;
+}
+.results-wrapper-inner, .search-statement-wrapper {
+  display:block;
+}
+.case-list, .officer-list {
+  display:none;
+}
+
+.filter-cases {
+  li.cases {
+    background-color: @cr-highlight;
+    a { 
+      color: @cr-lightest;
+      text-decoration: none;
+      
+      &:hover {
+        color: @cr-darkest;
+      }
+    }
+  }
+  #case-search-form {
+    display:block;
+  }
+  #officer-search-form {
+    display:none;
+  }
+  .search-statement-wrapper {
+    display:block;
+  }
+  .case-list, .results-wrapper-inner, .search-statement-wrapper {
+    display:block;
+  }
+}
+.filter-officers {
+  li.officers {
+    background-color: @cr-highlight;
+    a { 
+      color: @cr-lightest;
+      text-decoration: none;
+      
+      &:hover {
+        color: @cr-darkest;
+      }
+    }
+  }
+  #case-search-form {
+    display:none;
+  }
+  #officer-search-form {
+    display:block;
+  }
+  .search-statement-wrapper {
+    display:none;
+  }
+  .officer-list, .results-wrapper-inner {
+    display:block;
+  }
+}
+
+.detail-page {
+
+  .detail-wrapper {
+    display:block;
+  }
+
+  &.detail-officer {
+    .officer-list, .case-list, .results-wrapper-inner, .search-statement-wrapper {
+      display:none;
+    }
+  } 
+
+  &.detail-case {
+    .officer-list, .case-list, .results-wrapper-inner, .search-statement-wrapper {
+      display:none;
+    }
+  }
+
+  .case-description {
+    background-color:@cr-lightest;
+    padding:20px;
+  }
 }
 
 .wrapper-inner-flex {
