--- a/templates/_search.html
+++ b/templates/_search.html
@@ -1,8 +1,8 @@
 <div class="search">
   <div id="tabs">
     <ul id="search-selector" class="tab-selector">
-      <li class="cases {% if init_view == 'cases' %}active{% endif %}"><a href="/search/cases">Filter cases</a></li>
-      <li class="officers {% if init_view == 'officers' %}active{% endif %}"><a href="/search/officers">Officer search</a></li>
+      <li class="cases"><a href="/search/cases">Filter cases</a></li>
+      <li class="officers"><a href="/search/officers">Officer search</a></li>
     </ul>
     <div class="tab-containers">
       <div data-tab-id="cases" class="tab-container case-tab">
