--- a/templates/_case.html
+++ b/templates/_case.html
@@ -1,21 +1,15 @@
-<div class="detail-wrapper">
-  <div class="case-detail" data-case_number="{{ case.case_number }}">
+<div class="case" data-case_number="{{ case.case_number }}" onclick="location.href='{{ site_path }}case/{{ case.case_number }}'">
 
-    <h1>Case {{ case.case_number }}</h1>
-
-    <div class="case-payment">
-      <h2>{{ total_for_payments(case.payments) }}</h2>
-      <h3>{{ case.primary_cause }}</h3>
-      <p class="tags">{{ case.tags }}</p>
+  <div class="card-row">
+    <div class="case-payment-wrapper">
+      <h4>{{ case.case_number }}</h4>
+      <div class="case-payment">
+        <h2>${{ case.total_payments }}</h2>
+        <h3>{{ case.primary_cause }}</h3>
+      </div>
     </div>
 
-  </div>
-</div>
-
-<div class="detail-wrapper">
-  <div class="wrapper-inner-flex">
-    <div class="case-description"> 
-
+    <div class="case-description">
       <div class="case-details">
         {% for victim in case.victims %}
           <p><span class="card-label">Plaintiff: </span>
@@ -31,58 +25,34 @@
         {% endif %}
       </div>
 
-
       {% if (case.narrative != 'NULL') %}
         <div class="case-summary">
           <span class="card-label">Case summary: </span>
           <p>{{ case.narrative }}</p>
         </div>
       {% endif %}
+      
+      <p style="display:none;">{{ case.tags }}</p>
 
-
-      {% for victim in case.victims %}
-        {% if (victim.victim_2) %}
-          <span class="card-label">Additional victims: </span>
-          <ul class="case-details">
-              {% for victim in case.victims %}
-                {% if (victim.victim_2) %}
-                  <li>{{ victim.victim_2 }}</li>
-                {% endif %}
-                {% if (victim.victim_3) %}
-                  <li>{{ victim.victim_3 }}</li>
-                {% endif %}
-                {% if (victim.victim_4) %}
-                  <li>{{ victim.victim_4 }}</li>
-                {% endif %}
-                {% if (victim.victim_5) %}
-                  <li>{{ victim.victim_5 }}</li>
-                {% endif %}
-                {% if (victim.victim_6) %}
-                  <li>{{ victim.victim_6 }}</li>
-                {% endif %}
-                {% if (victim.victim_7) %}
-                  <li>{{ victim.victim_7 }}</li>
-                {% endif %}
-                {% if (victim.victim_8) %}
-                  <li>{{ victim.victim_8 }}</li>
-                {% endif %}
-              {% endfor %}
-          </ul>
-        {% endif %}
-      {% endfor %}
-
+      
+      {% if case.officers > 0 %}
+        <div class="case-officers">
+          <span class="card-label">Officers involved:</span>
+          <div class="officer-group">
+            {% for officer in case.officers %}
+              {% include 'templates/_officer.html' %}
+              <a href="{{ site_path }}officer/{{ officer.slug }}" class="police-icon" data-firstname="{{ officer.first }}" data-lastname="{{ officer.last }}"></a>
+            {% endfor %}
+           </div>
+        </div>
+      {% endif %}
+      
+       
     </div>
-
-    <div id="map"></div>
   </div>
+
+  
+
 </div>
 
 
-<div class="detail-wrapper">
-  <div class="case-officers">
-    <label class="results-label" style="float:none;">Officers involved:</label>
-     {% for officer in case.officers %}
-      {% include 'templates/_officer.html' %}
-     {% endfor %}
-  </div>
-</div>
