--- a/templates/officer.html
+++ b/templates/officer.html
@@ -1,6 +1,6 @@
 {% extends "templates/_base.html" %}
 
-{% block bodyattrs %}class="not-nested detail-page"{% endblock bodyattrs %}
+{% block bodyattrs %}class="not-nested detail-page detail-officer"{% endblock bodyattrs %}
 
 {% block content %}
   <div id="bg-static" class="bgimg"></div>
@@ -13,9 +13,21 @@
 
 	  <div id="results-wrapper">
       	{% include 'templates/_statement.html' %}
-	    <div class="detail-wrapper">
-	      {% include 'templates/_officer.html' %}
-	    </div>
+			
+			<div class="detail-wrapper">
+				<div class="officer" data-case_number="{{ officer.case_number }}">
+					<div class="officer-logo"></div>
+					<div class="officer-text">
+						<h2><a href="{{ url_for('cpd_settlements.officer', slug=officer.slug) }}">{{ officer.prefix }} {{ officer.first }} {{ officer.last }}</a></h2>
+						<div class="badge-num"><span>Badge #:</span> {{ officer.badge_number }}</div>
+						<div class="total-payments-container">
+							<span class="total-payments">${{ officer.total_payments }}</span> 
+							<span>total payments for all related cases</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
 	    {% include 'templates/_results.html' %}
 	  </div> <!--end: results wrapper-->
 	</div><!--end: container-inner-->
