officer detail: map, rendered case list

--- a/templates/_map.html
+++ b/templates/_map.html
@@ -26,7 +26,7 @@
             zoom: 11,
 
             // The latitude and longitude to center the map (always required)
-            center: new google.maps.LatLng({{ case.latitude }}, {{ case.longitude }}), // Chicago
+            center: new google.maps.LatLng(41.8781, -87.6298), // Chicago
 
             // How you would like to style the map. 
             // This is where you would paste any style found on Snazzy Maps.
@@ -41,10 +41,57 @@
         var map = new google.maps.Map(mapElement, mapOptions);
 
         // Let's also add a marker while we're at it
-        var marker = new google.maps.Marker({
-            position: new google.maps.LatLng({{ case.latitude }}, {{ case.longitude }}),
-            map: map,
-            title: 'Snazzy!'
-        });
+
+        if ($('.detail-case').length > 0) {
+            var marker = new google.maps.Marker({
+                position: new google.maps.LatLng({{ case.latitude }}, {{ case.longitude }}),
+                map: map,
+                title: 'Snazzy!'
+            });
+        } else if ($('.detail-officer')) {
+
+            var latlng = []; 
+            var infowindow = null;
+
+            for (var i=0; i<officerCaseList.length; i++){
+                var thisCase = officerCaseList[i];
+                var lat = thisCase.latitude;
+                var lon = thisCase.longitude;
+
+                if ( !isNaN(lat) && !isNaN(lon) ) {
+                    var coords = new google.maps.LatLng(thisCase.latitude, thisCase.longitude);
+                    latlng.push(coords);
+
+                    infowindow = new google.maps.InfoWindow({
+                        content: "holding..."
+                    });
+
+                    var marker = new google.maps.Marker({
+                        position: coords,
+                        map: map,
+                        title: thisCase.case_number
+                    });
+
+                    marker.addListener('click', function() {
+                        infowindow.setContent('<div id="content">'+ this.title +'</div>');
+                        infowindow.open(map, this);
+                    });
+                }
+                
+            };
+
+            // if an officer has more than one case, zoom map to show all markers
+            if (officerCaseList.length > 1){
+                var latlngbounds = new google.maps.LatLngBounds();
+                for (var i = 0; i < latlng.length; i++) {
+                    latlngbounds.extend(latlng[i]);
+                }
+                map.fitBounds(latlngbounds);
+            } else {
+                map.setCenter(latlng[0]);
+            }
+
+        }
+        
     }
 </script>
