marker labels for case map, small style updates

--- a/less/style.less
+++ b/less/style.less
@@ -133,6 +133,8 @@ Filters
 .search {
   width:30%;
   float:left;
+  border-right:1px solid @cr-darkest;
+  margin-right:-1px;
   h2 {
     margin-bottom:1em;
   }
@@ -227,7 +229,6 @@ ul.tab-selector {
   border:1px solid @cr-darkest;
   border-top:none;
   border-right: none;
-  margin-bottom:2em;
 
   &:after {
     content: "";
