--- a/templates/case.html
+++ b/templates/case.html
@@ -124,7 +124,7 @@
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFmYnsdne3OZUy_MasdujKQ-FDspKBELQ&sensor=false"></script>
 <script type="text/javascript" src="{{ url_for('cpd_settlements.static', filename='js/map.js') }}"></script>
 <script>
-	var thisCase = { latitude:{{case.latitude}}, longitude:{{case.longitude}} };
+	var thisCase = { case_number:'{{case.case_number}}', latitude:{{case.latitude}}, longitude:{{case.longitude}} };
 	// When the window has finished loading create our google map below
 	google.maps.event.addDomListener(window, 'load', init(thisCase));
 </script>
