--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,8 @@ Filters
 .search {
   width: 30%;
   float: left;
+  border-right: 1px solid #000000;
+  margin-right: -1px;
 }
 .search h2 {
   margin-bottom: 1em;
@@ -193,7 +195,6 @@ ul.tab-selector li.active a:hover {
   border: 1px solid #000000;
   border-top: none;
   border-right: none;
-  margin-bottom: 2em;
 }
 .tab-containers:after {
   content: "";
