--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -557,7 +557,7 @@ Results
 .officer .officer-text {
   padding-left: 140px;
   background: url("../images/police-icon.svg") center left no-repeat;
-  background-size: contain;
+  background-size: 100px;
   position: relative;
 }
 .officer .officer-text h2 {
@@ -698,7 +698,7 @@ label.results-label {
   margin-right: 20px;
 }
 .wrapper-inner-flex #map {
-  min-height: 400px;
+  min-height: 300px;
   flex: 1;
   margin-left: 0px;
 }
@@ -1196,4 +1196,28 @@ body.not-nested {
 .not-nested #bg-solid {
   background-color: #000000;
   display: block;
+}
+/* ==========================================================================
+Media Queries
+========================================================================== */
+@media screen and (max-width: 1000px) {
+  .wrapper-inner-flex {
+    display: block;
+  }
+  .wrapper-inner-flex .case-description {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+  .detail-wrapper .officer-logo {
+    min-width: 100%;
+  }
+  .detail-wrapper .officer-text {
+    padding-left: 0;
+    padding-top: 40px;
+    background: url("../images/police-icon.svg") top center no-repeat;
+    background-size: 40px;
+    color: #fff;
+    position: relative;
+    text-align: center;
+  }
 }
